--- a/inlämningsuppgift/Pages/IndexView/Partials/_CatagoryPartial.cshtml
+++ b/inlämningsuppgift/Pages/IndexView/Partials/_CatagoryPartial.cshtml
@@ -3,5 +3,17 @@
 
 
 
-<a href="#" class="btn border">@Model.Name</a>
+<a href="#"class="catagory">
 
+
+    <img class="background-img " src="/images/balloon.jpg" alt="Alternate Text" />
+
+    <div class="overlay background-img"></div>
+
+    <h5 class="title">@Model.Name</h5>
+</a>
+
+
+
+
+<link href="/css/catagory.css" rel="stylesheet" />
