--- a/inlämningsuppgift/wwwroot/css/Index/Index.css
+++ b/inlämningsuppgift/wwwroot/css/Index/Index.css
@@ -1,29 +1,38 @@
-﻿
+﻿body {
+    margin: 0;
+    padding: 0;
+}
 
 
 .product-container{
-    grid-row-gap:20px;
+    grid-gap:50px;
 }
 
-.product {
-    background-image: linear-gradient(270deg, rgba(0,11,38,0) 5rem, rgba(0,11,38,0.4), rgba(0,1,38,0.5));
+
+
+.catagory-section {
+    background-color: #f7f7f7;
+}
+
+.catagory-container {
     height: auto;
-    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-gap: 20px;
+}
+
+.catagory-container .catagory{
+    position:relative;
+    bottom:3em;
 }
 
 
-.product-background {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -3;
+.hero {
+    background-image: url(/images/hero.jpg);
+    width: 100vw;
+    height: 60vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
-
-
-
