--- a/inlämningsuppgift/wwwroot/css/site.css
+++ b/inlämningsuppgift/wwwroot/css/site.css
@@ -1,6 +1,29 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+* {
+    --main-dark-color: #162e44;
+}
+
+
+
+.image-fit {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.bg-blue{
+    background-color: var(--main-dark-color);
+}
+
+
+
+h1, h2, h3, h4, h5, p {
+    font-family: 'Montserrat', sans-serif;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -24,10 +47,13 @@ a {
   border-color: #1861ac;
 }
 
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+   
+    font-size: 14px;
 }
 @media (min-width: 768px) {
   html {
@@ -54,8 +80,9 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    font-family: 'Varela Round', sans-serif;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
