--- a/inlämningsuppgift/Pages/Shared/_CatagoryPartial.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_CatagoryPartial.cshtml
@@ -5,7 +5,7 @@
 <div class="col-md-4 wow fadeInDown col-9" data-wow-delay=".2s">
     <ul class="list-marked-2 box-categories-list">
         <li>
-            <a href="#"><img src="images/cta-1-368x420.jpg" alt="" width="368" height="420" /></a>
+            <a asp-page="/TourPage/Tour" asp-route-catagoryId="@Model.Id"><image image-model="@Model.image" width="368" height="420" /></a>
             <h5 class="box-categories-title">@Model.Name</h5>
         </li>
     </ul>
