--- a/inlämningsuppgift/Pages/Shared/_Layout.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7CPoppins:400%7CTeko:300,400">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="~/css/bootstrap.css">
+    <link rel="stylesheet" href="~/css/fonts.css">
+    <link rel="stylesheet" href="~/css/style.css">
     <link href="~/css/site.css" rel="stylesheet" />
 
 </head>
@@ -51,28 +51,41 @@
                         <div class="rd-navbar-main">
                             <div class="rd-navbar-nav-wrap">
 
-                                <ul class="list-inline list-inline-md rd-navbar-corporate-list-social">
+                                <form method="get" action="/TourPage/Tour" class="col-md-12 col-lg-4">
+                                    <div class="input-group rd-navbar-nav">
+                                        <div class="input-group-prepend">
+                                            <button class="btn btn-outline-secondary" type="submit">Sök</button>
+                                        </div>
+                                        <input type="text" class="form-control" name="query">
+                                    </div>
+                                </form>
+
+                                <ul class="list-inline list-inline-md rd-navbar-corporate-list-social col-md-12 col-lg-4">
                                     <li><a class="icon fa fa-facebook" href="#"></a></li>
                                     <li><a class="icon fa fa-twitter" href="#"></a></li>
                                     <li><a class="icon fa fa-google-plus" href="#"></a></li>
                                     <li><a class="icon fa fa-instagram" href="#"></a></li>
                                 </ul>
 
+
+
                                 <!-- RD Navbar Nav-->
-                                <ul class="rd-navbar-nav">
+                                <ul class="rd-navbar-nav col-md-12 col-lg-4">
                                     <li class="rd-nav-item active">
-                                        <a class="rd-nav-link" href="index.html">Home</a>
+                                        <a class="rd-nav-link" asp-page="/index">Home</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="about.html">About</a>
+                                        <a class="rd-nav-link" asp-page="/CatagoryPage/Catagory">Catagories</a>
                                     </li>
                                     <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="typography.html">Typography</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" href="contact-us.html">Contact Us</a>
+                                        <a class="rd-nav-link" asp-page="/TourPage/Tour">Tours</a>
                                     </li>
                                 </ul>
+
+
+
+
+
                             </div>
                         </div>
                     </div>
@@ -113,8 +126,8 @@
     <div class="snackbars" id="form-output-global"></div>
     <!-- Javascript-->
 
-    <script src="js/core.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="~/js/core.min.js"></script>
+    <script src="~/js/script.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 
