--- a/inlämningsuppgift/Pages/Shared/_ProductPartial.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_ProductPartial.cshtml
@@ -1,21 +1,23 @@
 ﻿@model inlämningsuppgift.Models.ProductViewModel
-
+@using System.Globalization
 
 <div class="col-sm-6 col-md-12 wow fadeInRight">
     <!-- Product Big-->
     <article class="product-big">
         <div class="unit flex-column flex-md-row align-items-md-stretch">
-            <div class="unit-left"><a class="product-big-figure" href="#"><img src="images/product-big-1-600x366.jpg" alt="" width="600" height="366" /></a></div>
+            <div class="unit-left"><a class="product-big-figure" href="#"><image image-model="@Model.image" width="600" height="366" /></a></div>
             <div class="unit-body">
                 <div class="product-big-body">
-                    <h5 class="product-big-title"><a href="#">@Model.Name,<img class="icon" src="~/icons/pin.png" /> @Model.location</a></h5>
+                    <h5 class="product-big-title"><a href="#">@Model.Name</a></h5>
+                    <span><img class="icon" src="~/icons/pin.png" /> @Model.location</span>
                     <div class="group-sm group-middle justify-content-start">
                         <div class="product-big-rating"><span class="icon material-icons-star"></span><span class="icon material-icons-star"></span><span class="icon material-icons-star"></span><span class="icon material-icons-star"></span><span class="icon material-icons-star_half"></span></div><a class="product-big-reviews" href="#">4 customer reviews</a>
                     </div>
                     <p class="product-big-text">@Model.description</p><a class="button button-black-outline button-ujarak" href="#">Buy This Tour</a>
-                    <div class="product-big-price-wrap"><span class="product-big-price">@Model.price</span></div>
+                    <div class="product-big-price-wrap"><span class="product-big-price">@Model.price.ToString("c")</span></div>
                 </div>
             </div>
         </div>
+  
     </article>
 </div>
