--- a/inlämningsuppgift/Pages/_ViewImports.cshtml
+++ b/inlämningsuppgift/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using inlämningsuppgift
 @namespace inlämningsuppgift.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, inlämningsuppgift
