added styling to login page, and seeded roles and users

--- a/inlämningsuppgift/Pages/Shared/_Layout.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 <button class="rd-navbar-toggle text-white" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
                                 <div class="rd-navbar-brand">
-                                    <!--Brand--><a class="brand " href="index.html"><h3 class="hover-green text-white">Inlämmningsuppgift</h3></a>
+                                    <!--Brand--><a class="brand " href="index.html"><h3 class="hover-green text-white">Inlämningsuppgift</h3></a>
                                 </div>
                             </div>
 
@@ -52,7 +52,7 @@
                             <div class="rd-navbar-nav-wrap">
 
 
-                                <div class="col-md-12  col-lg-5 p-4">
+                                <div class="col-md-12  col-lg-5 p-2">
                                     <form method="get" action="/TourPage/Tour">
                                         <partial name="_SearchfieldPartial" />
                                     </form>
