--- a/inlämningsuppgift/Areas/Identity/Pages/Account/Login.cshtml
+++ b/inlämningsuppgift/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,42 +5,39 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
+
+<div class="row justify-content-center h-100">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
+                <h4 class="Login-title mb-4">Log in</h4>
+
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
+                <div class="form-group mb-4">
+                    <input asp-for="Input.Email" class="form-control Login-input" placeholder="Email" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
+                <div class="form-group d-flex flex-column">
+                    <input asp-for="Input.Password" class="form-control Login-input" placeholder="Password" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <a class="forgot-password" id="forgot-password"  asp-page="./ForgotPassword">Forgot</a>
                 </div>
                 <div class="form-group">
-                    <div class="checkbox">
+                    <div class=" remember">
                         <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
+                            <input asp-for="Input.RememberMe" type="checkbox"/>
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn  form-control btn-green">Log in</button>
                 </div>
                 <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
+
+                   
+                        <a class="btn btn-primary form-control" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                   
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
@@ -48,7 +45,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -77,9 +74,13 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <link href="~/css/Login/Login.css" rel="stylesheet" />
+
 }
