finished catagory and product crud, added product details page, added price ordering to product list

--- a/inlämningsuppgift/Pages/Index.cshtml
+++ b/inlämningsuppgift/Pages/Index.cshtml
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <a class="button button-black-outline button-ujarak" href="#">More tours</a>
+    <a class="button button-black-outline button-ujarak" asp-page="/ProductPage/Product">More tours</a>
 </section>
 
 
