--- a/inlämningsuppgift/Pages/Shared/_SearchfieldPartial.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_SearchfieldPartial.cshtml
@@ -1,12 +1,12 @@
 ﻿
+@model string  
 
 
 
 
-
-    <div class=" searchfield">
+    <div class="searchfield">
         <button class="searchBtn" type="button"><i class="fas fa-search"></i></button>
-        <input class="searchInput" type="text" name="query" placeholder="Search tours">
+        <input class="searchInput" type="text" name="query" placeholder="@Model">
     </div>
 
 
