--- a/inlämningsuppgift/Pages/Shared/_Layout.cshtml
+++ b/inlämningsuppgift/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿
+
+
+<!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
 <head>
     <title>Home</title>
@@ -30,7 +33,7 @@
         <!-- Page Header-->
         <header class="section page-header">
             <!-- RD Navbar-->
-            <div class="rd-navbar-wrap">
+            <div class="rd-navbar-wrap h-auto">
                 <nav class="rd-navbar rd-navbar-corporate" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed" data-md-layout="rd-navbar-fixed" data-md-device-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static" data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static" data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="46px" data-xl-stick-up-offset="46px" data-xxl-stick-up-offset="106px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
 
                     <div class="rd-navbar-aside-outer" style="background-color: #162844;">
@@ -41,46 +44,48 @@
                                 <button class="rd-navbar-toggle text-white" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                                 <!-- RD Navbar Brand-->
                                 <div class="rd-navbar-brand">
-                                    <!--Brand--><a class="brand " href="index.html"><h3 class="hover-green text-white">Inlämningsuppgift</h3></a>
+                                    <!--Brand--><a class="brand " asp-page="/"><h3 class="hover-green text-white">Inlämningsuppgift</h3></a>
                                 </div>
                             </div>
 
                         </div>
                     </div>
                     <div class="rd-navbar-main-outer">
+
+
+                        <!-- RD Navbar Nav-->
                         <div class="rd-navbar-main">
                             <div class="rd-navbar-nav-wrap">
 
+                                <!--Login-->
+                                <div class="rd-navbar-aside-right col-md-12 col-lg-4  text-bla">
+                                    <partial name="_LoginPartial" />
 
-                                <div class="col-md-12  col-lg-5 p-2">
-                                    <form method="get" action="/TourPage/Tour">
-                                        <partial name="_SearchfieldPartial" />
-                                    </form>
+
                                 </div>
 
+                                <!--Navigation-->
+                                <div class="col-md-12 col-lg-8 rd-navbar-nav d-flex flex-md-column flex-lg-row">
+                                    <ul class=" col-md-12 col-lg-6 m-0">
+                                        <li class="rd-nav-item active">
+                                            <a class="rd-nav-link" asp-page="/index">Home</a>
+                                        </li>
+                                        <li class="rd-nav-item">
+                                            <a class="rd-nav-link" asp-page="/CatagoryPage/Catagory">Catagories</a>
+                                        </li>
+                                        <li class="rd-nav-item">
+                                            <a class="rd-nav-link" asp-page="/ProductPage/Product">Tours</a>
+                                        </li>
+                                    </ul>
 
-                                <div class="rd-navbar-aside-right col-lg-3">
-                                    <partial name="_LoginPartial"/>
+                                    <div class="col-md-12  col-lg-6 p-2">
+                                        <form method="get" action="/ProductPage/Product">
+                                            @{ string searchPlaceholder = "Search tours";}
+                                            <partial name="_SearchfieldPartial" model="searchPlaceholder" />
+                                        </form>
+                                    </div>
+
                                 </div>
-
-
-                                <!-- RD Navbar Nav-->
-                                <ul class="rd-navbar-nav col-md-12 col-lg-4 m-0">
-                                    <li class="rd-nav-item active">
-                                        <a class="rd-nav-link" asp-page="/index">Home</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" asp-page="/CatagoryPage/Catagory">Catagories</a>
-                                    </li>
-                                    <li class="rd-nav-item">
-                                        <a class="rd-nav-link" asp-page="/TourPage/Tour">Tours</a>
-                                    </li>
-                                </ul>
-
-
-
-
-
                             </div>
                         </div>
                     </div>
@@ -124,6 +129,7 @@
     <script src="~/js/core.min.js"></script>
     <script src="~/js/script.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+ 
 
 
     @await RenderSectionAsync("Scripts", required: false)
