--- a/inlämningsuppgift/wwwroot/css/Shared/searchfield.css
+++ b/inlämningsuppgift/wwwroot/css/Shared/searchfield.css
@@ -4,6 +4,7 @@ https://codepen.io/ahmadbassamemran/pen/rNjMXqg*/
 
 
 .searchfield {
+    width:100%;
     position: relative;
     display: flex;
 }
@@ -41,6 +42,7 @@ https://codepen.io/ahmadbassamemran/pen/rNjMXqg*/
 }
 
 
+
 .searchBtn:focus + .searchInput {
     width: 100%;
     border-radius: 0px;
@@ -57,4 +59,33 @@ https://codepen.io/ahmadbassamemran/pen/rNjMXqg*/
     background-color: transparent;
     border-bottom: 1px solid rgba(255,255,255,.5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+
+.searchfield-dark-static .searchBtn {
+    color: rgba(10,10,10,0.5);
+    border-color: rgb(10,10,10);
+}
+
+    .searchfield-dark-static .searchBtn:focus {
+        color: rgba(10,10,10,0.5);
+    }
+
+.searchfield-dark-static .searchInput {
+    color: rgb(10,10,10);
+    border-color: rgb(10,10,10);
+    background-color: transparent;
+    border-radius: 0px;
+    padding-left: 40px;
+    border: 1px solid rgba(10,10,10,.2);
+    width: 100%;
+    border-radius:10px;
+}
+
+.searchfield-dark-static .searchBtn:focus + .searchInput {
+    border-bottom: 1px solid rgba(10,10,10,.2);
+}
+
+.searchfield-dark-static .searchInput:focus {
+    border: 1px solid rgba(10,10,10,.5);
 }
