--- a/inlämningsuppgift/wwwroot/css/site.css
+++ b/inlämningsuppgift/wwwroot/css/site.css
@@ -10,6 +10,12 @@ for details on configuring this project to bundle and minify static web assets. 
     font-style:normal
 }
 
+.catagoryImage {
+    height: 420px;
+    object-fit: cover;
+}
+}
+
 .cursor-pointer:hover{
     cursor:pointer !important;
 }
