--- a/inlämningsuppgift/Pages/ProductPage/Product.cshtml
+++ b/inlämningsuppgift/Pages/ProductPage/Product.cshtml
@@ -2,7 +2,8 @@
 @using enums
 @model inlämningsuppgift.Pages.TourPage.TourModel
 
-    <input type="hidden" value="@Model.query" id="query"/>
+
+
 
 <section class="section section-sm bg-default">
     <div class="container">
@@ -10,9 +11,9 @@
         <div class="row flex-column">
             <h2>Tours</h2>
 
-            @if (Model.query != null)
+            @if (Model.Query != null)
             {
-                <h4>Result for "@Model.query"</h4>
+                <h4>Result for "@Model.Query"</h4>
             }
 
         </div>
@@ -21,11 +22,11 @@
         <div>
             <form id="orderForm">
 
-                <input asp-for="query" />
-
+                <input asp-for="Query" />
+                <input asp-for="CatagoryId" />
                 <div class=" col-6 form-group d-flex">
                     <label class="float-left col-3 mb-auto mt-auto">Price Order</label>
-                    <select id="priceOrder" class="form-control col-3" asp-for="order" asp-items="@Model.priceOrderList"></select>
+                    <select id="priceOrder" class="form-control col-3" asp-for="Order" asp-items="@Model.priceOrderList"></select>
                 </div>
             </form>
         </div>
@@ -65,5 +66,7 @@
 
 @section Scripts
 { 
-    <script src="~/js/Product/Product.js" defer></script>
+    <script src="~/js/Product/Product.js" ></script>
+    <script>
+        init(@(Json.Serialize(new {query = Model.Query, order = Model.Order, catagoryId = Model.CatagoryId })));    </script>
 }
